--- a/client/package.json
+++ b/client/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.5.1",
+    "@material-ui/icons": "^4.5.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "react-uid": "^2.2.0"
+    "react-uid": "^2.2.0",
+    "statezero": "^0.5.4"
   },
   "scripts": {
     "start": "react-scripts start",
