--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "server.js",
   "scripts": {
     "setup": "yarn install && cd client && yarn install && cd ..",
-    "build-run": "cd client && yarn run build && cd .. && node server.js",
+    "build": "cd client && yarn run build && cd .. && node server.js",
     "start": "node server.js",
     "heroku-postbuild": "cd client && yarn install && yarn run build",
     "test": "echo \"Error: no test specified\" && exit 1"
