--- a/now.json
+++ b/now.json
@@ -1,4 +1,4 @@
 {
     "version": 2,
-    "builds": [{ "src": "*.js", "use": "@now/node-server" }]
+    "builds": [{ "src": "server.js", "use": "@now/node-server" }]
   }
