--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,8 @@ cache:
   directories:
   - node_modules
 script:
+  - yarn run setup
   - yarn run build
+ deploy:
+  provider: heroku
+  app: arkonegraph
