--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "server.js",
   "scripts": {
     "setup": "yarn install && cd client && yarn install && cd ..",
+    "travis-build": "cd client && yarn run build && cd ..",
     "build": "cd client && yarn run build && cd .. && node server.js",
     "start": "node server.js",
     "heroku-postbuild": "cd client && yarn install && yarn run build",
