--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.5.1",
     "@material-ui/icons": "^4.5.1",
     "crypto-js": "^4.0.0",
+    "material-table": "^1.57.2",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
