--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.5.1",
     "@material-ui/icons": "^4.5.1",
+    "animejs": "^3.2.0",
     "crypto-js": "^4.0.0",
     "material-table": "^1.57.2",
     "react": "^16.10.2",
