--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "material-table": "^1.57.2",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-intl": "^5.4.7",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-uid": "^2.2.0",
