--- a/client/package.json
+++ b/client/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@iconify/icons-simple-icons": "^1.0.46",
+    "@iconify/react": "^1.1.3",
     "@material-ui/core": "^4.5.1",
     "@material-ui/icons": "^4.5.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "animejs": "^3.2.0",
     "crypto-js": "^4.0.0",
+    "lodash-es": "^4.17.15",
     "material-table": "^1.57.2",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
