--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/helper-call-delegate": "^7.10.4",
     "@iconify/icons-simple-icons": "^1.0.46",
     "@iconify/react": "^1.1.3",
     "@material-ui/core": "^4.5.1",
