--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "travis-build": "cd client && yarn run build && cd ..",
     "build": "cd client && yarn run build && cd .. && node server.js",
     "start": "node server.js",
+    "dev": "nodemon --watch ./server.js server.js",
     "heroku-postbuild": "cd client && yarn install && yarn run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,7 +16,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongodb": "^3.4.1",
-    "mongoose": "^5.8.3"
+    "mongoose": "^5.8.3",
+    "nodemon": "^2.0.4"
   },
   "author": "Strontium",
   "license": "MIT"
