feat(fix) IE11 support

--- a/client/package.json
+++ b/client/package.json
@@ -11,15 +11,21 @@
     "@material-ui/lab": "^4.0.0-alpha.56",
     "animejs": "^3.2.0",
     "axios": "^0.20.0",
+    "core-js": "^3.6.5",
     "crypto-js": "^4.0.0",
     "lodash-es": "^4.17.15",
     "material-table": "^1.57.2",
+    "node-sass": "^4.14.1",
+    "raf": "^3.4.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-intl": "^5.4.7",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-uid": "^2.2.0",
+    "regenerator-runtime": "^0.13.7",
+    "sass": "^1.26.11",
+    "sass-loader": "^10.0.2",
     "statezero": "^0.5.4"
   },
   "scripts": {
@@ -35,12 +41,14 @@
     "production": [
       ">0.2%",
       "not dead",
-      "not op_mini all"
+      "not op_mini all",
+      "ie > 9"
     ],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
-      "last 1 safari version"
+      "last 1 safari version",
+      "ie > 9"
     ]
   },
   "proxy": "http://localhost:3001"
